--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         <!-- Footer Section -->
         <section class="footer">
-            <h1>©️ 2026 Karl — Animated Personal Portfolio</h1>
+            <h1>©️ 2026 Karl — Animated Portfolio</h1>
             <div class="box-icons">
                 <p>
                     <a href="https://www.facebook.com/karlzzzzz.01/" target="_blank">
